--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest pytest-cov
 
-      - name: ✅ Rodar testes com pytest
+      - name: ✅ Rodar testes com cobertura
         run: |
-          pytest tests/
+          pytest --cov=infra.protecao --cov-report=term-missing --cov-report=xml tests/
