--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -27,4 +27,9 @@ jobs:
 
       - name: ✅ Rodar testes com cobertura
         run: |
-          pytest --cov=infra.protecao --cov-report=term-missing --cov-report=xml tests/
+          pytest tests/ \
+            --cov=infra \
+            --cov=simuladores \
+            --cov-report=term-missing \
+            --cov-report=xml \
+            --cov-report=html
