--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,80 @@
+# ============================================
+# PROTECAI_MINI: LABORATÓRIO DE COORDENAÇÃO DE PROTEÇÃO + IA/ML
+# ============================================
+
+# === CORE FRAMEWORKS ===
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
 pydantic==2.7.1
 sqlalchemy==2.0.30
 asyncpg==0.29.0
 
+# === ANÁLISE DE DADOS E ENGENHARIA ELÉTRICA ===
 pandas==2.2.2
-pandapower==2.14.1
+numpy==1.26.4
+pandapower==3.1.2
+scipy==1.13.1
+matplotlib==3.10.3
+seaborn==0.13.2
+plotly==5.24.1
 
+# === MACHINE LEARNING CORE ===
+scikit-learn==1.5.1
+xgboost==2.1.1
+lightgbm==4.5.0
+catboost==1.2.7
+
+# === DEEP LEARNING ===
+torch==2.3.0
+torchvision==0.18.0
+tensorflow==2.17.0
+keras==3.4.1
+
+# === REINFORCEMENT LEARNING ===
 gymnasium==0.29.1
 stable-baselines3==2.3.2
-torch==2.3.0
-numpy==1.26.4
+tensorboard==2.17.0
+wandb==0.17.7
 
+# === OTIMIZAÇÃO E ALGORITMOS ===
+optuna==4.0.0
+hyperopt==0.2.7
+pymoo==0.6.1.3
+deap==1.4.1
+
+# === PROCESSAMENTO DE DADOS ===
+polars==1.4.1
+pyarrow==17.0.0
+dask==2024.8.0
+
+# === INTERPRETABILIDADE E EXPLICABILIDADE ===
+shap==0.46.0
+lime==0.2.0.1
+eli5==0.13.0
+
+# === SÉRIES TEMPORAIS ===
+prophet==1.1.5
+statsmodels==0.14.2
+tslearn==0.6.3
+
+# === PROCESSAMENTO DE SINAIS ===
+pywavelets==1.7.0
+pyemd==1.0.0
+
+# === UTILITÁRIOS E PRODUÇÃO ===
+mlflow==2.15.1
+joblib==1.4.2
+tqdm==4.66.5
+rich==13.8.1
+
+# === DESENVOLVIMENTO E TESTES ===
 python-dotenv==1.0.1
 httpx==0.27.0
 pytest==8.2.1
+pytest-cov==5.0.0
+black==24.8.0
+flake8==7.1.1
 
+# === PERFORMANCE ===
 numba==0.61.2
+cython==3.0.11
