--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ deap==1.4.1
 
 # === PROCESSAMENTO DE DADOS ===
 polars==1.4.1
-pyarrow==17.0.0
+pyarrow>=4.0.0,<16
 dask==2024.8.0
 
 # === INTERPRETABILIDADE E EXPLICABILIDADE ===
