--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -67,8 +67,7 @@ jobs:
             --cov=simuladores \
             --cov-report=term-missing \
             --cov-report=xml \
-            --cov-report=html \
-            --cov-fail-under=5
+            --cov-report=html
 
       - name: 📊 Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
