--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -229,30 +229,116 @@ jobs:
             bandit-report.json
             safety-report.json
 
-  # Job 5: Deploy Preview (apenas PRs)
-  deploy-preview:
+  # Job 5: Deploy Frontend
+  deploy-frontend:
     runs-on: ubuntu-latest
-    name: 🚀 Deploy Preview
+    name: 🌐 Deploy Frontend
     needs: [backend-tests, frontend-tests, integration-tests]
-    if: github.event_name == 'pull_request'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: 🔄 Checkout do código
         uses: actions/checkout@v4
+
+      - name: 🟢 Setup Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: src/frontend/petro-protecai-frontend/package-lock.json
+
+      - name: 📦 Instalar dependências Frontend
+        working-directory: src/frontend/petro-protecai-frontend
+        run: npm ci
+
+      - name: 🏗️ Build Frontend para Produção
+        working-directory: src/frontend/petro-protecai-frontend
+        run: |
+          npm run build
+          echo "Build concluído com sucesso!"
 
       - name: 📦 Download Frontend Build
         uses: actions/download-artifact@v3
         with:
           name: frontend-build
           path: dist
+        continue-on-error: true
 
-      - name: 🚀 Deploy to Preview Environment
+      - name: 🚀 Deploy para GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: src/frontend/petro-protecai-frontend/dist
+          cname: protecai-mini.github.io
+
+      - name: 🌍 Deploy para Netlify (Alternativo)
+        if: env.NETLIFY_AUTH_TOKEN != ''
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: src/frontend/petro-protecai-frontend/dist
+          production-branch: main
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Deploy do ProtecAI Mini v${{ github.sha }}"
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        continue-on-error: true
+
+      - name: ✅ Deploy Concluído
         run: |
-          echo "🚀 Deploy para ambiente de preview"
-          echo "Preview URL: https://preview-${{ github.event.number }}.protecai-mini.com"
-          # Aqui você adicionaria o deploy real para um ambiente de preview
+          echo "🎉 Frontend deploy concluído com sucesso!"
+          echo "🌐 Dashboard disponível em: https://protecai-mini.github.io"
+          echo "📊 Status: ONLINE"
 
-  # Job 6: Release (apenas main branch)
+  # Job 6: Deploy Preview (apenas PRs)
+  deploy-preview:
+    runs-on: ubuntu-latest
+    name: 🔍 Deploy Preview
+    needs: [backend-tests, frontend-tests]
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - name: 🔄 Checkout do código
+        uses: actions/checkout@v4
+
+      - name: 🟢 Setup Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: src/frontend/petro-protecai-frontend/package-lock.json
+
+      - name: 📦 Instalar dependências Frontend
+        working-directory: src/frontend/petro-protecai-frontend
+        run: npm ci
+
+      - name: 🏗️ Build Preview
+        working-directory: src/frontend/petro-protecai-frontend
+        run: npm run build
+
+      - name: 🔍 Deploy Preview para Netlify
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: src/frontend/petro-protecai-frontend/dist
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Preview PR #${{ github.event.number }}"
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        continue-on-error: true
+
+      - name: 💬 Comentar PR com Preview
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `🔍 **Preview Deploy Disponível!**\n\n🌐 **Dashboard Preview:** [Clique aqui para acessar](https://deploy-preview-${{ github.event.number }}--protecai-mini.netlify.app)\n\n✅ Build concluído com sucesso!`
+            })
+
+  # Job 7: Release (apenas main branch)
   release:
     runs-on: ubuntu-latest
     name: 🏷️ Release & Deploy
