--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,46 @@
 			"group": "build",
 			"isBackground": true,
 			"problemMatcher": []
+		},
+		{
+			"label": "Run ProtecAI Tests",
+			"type": "shell",
+			"command": "python -m pytest tests/ -v --tb=short --color=yes",
+			"group": "test",
+			"isBackground": false,
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			}
+		},
+		{
+			"label": "Run Tests with Coverage",
+			"type": "shell",
+			"command": "python -m pytest tests/ -v --cov=src --cov-report=html --cov-report=term",
+			"group": "test",
+			"isBackground": false,
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			}
+		},
+		{
+			"label": "Run Integration Tests Only",
+			"type": "shell",
+			"command": "python -m pytest tests/test_integration_complete.py -v --tb=short",
+			"group": "test",
+			"isBackground": false,
+			"problemMatcher": []
 		}
 	]
 }
