--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ rich==13.8.1
 python-dotenv==1.0.1
 httpx==0.27.0
 pytest==8.2.1
+pytest-asyncio==0.23.6
 pytest-cov==5.0.0
 black==24.8.0
 flake8==7.1.1
